<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.jaumard.instagrim.ui.login.LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="com.jaumard.instagrim.ui.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:transitionName="@string/avatar_transition_name"
            app:layout_constraintBottom_toBottomOf="@id/placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            bind:galleryAccessor="@{viewModel.galleryAccessor}"
            bind:user="@{viewModel.user}"
            bind:username="@{username}"
            tools:targetApi="lollipop"/>

        <View
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/username"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_space"
            android:text="@{viewModel.user.fullName}"
            android:transitionName="@string/username_transition_name"
            android:visibility="@{viewModel.user != null}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_avatar"
            tools:targetApi="lollipop"
            tools:text="Jimmy Aumard"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_space"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/login_with_instagram"
            android:visibility="@{!viewModel.isLoading &amp;&amp; viewModel.user == null}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading}"
            app:layout_constraintBottom_toBottomOf="@id/profile_avatar"
            app:layout_constraintLeft_toLeftOf="@id/profile_avatar"
            app:layout_constraintRight_toRightOf="@id/profile_avatar"
            app:layout_constraintTop_toTopOf="@id/profile_avatar"
            />

    </android.support.constraint.ConstraintLayout>
</layout>